2007-05-14  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Do not builds docs/*/Makefile.  These aren't needed.
	* Makefile.am: Do not distribute xmldocs.make or omf.make.
	* omf.make, xmldocs.make: Delete these files.  They aren't needed.
	* docs/*/Makefile.am:  Delete these files.  They aren't needed.
	  Update to no longer use the deprecated xmldocs.make and omf.make.
	  Now gnome-doc-utils.make handles everything.
	* docs/Makefile.am: No longer go into SUBDIRS.  Instead all all
	  languages to DOC_LINGUAS.  Add gdm.xml to DOC_ENTITIES.  This
	  should fix bug #431168.

2007-05-14  Brian Cameron  <brian.cameron@sun.com>

	* omf.make, xmldocs.make: Bump to the latest versions from
	  gnome-common 2.18.0.

2007-05-14  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm-socket-protocol.h: Change location of .gdm_socket
	  file from /tmp to /var/run.  Fixes bug #331059.  This interface
	  change also required changing gnome-session, gnome-panel, and
	  the Fast-User-Switch Applet (FUSA).  I understand all these
	  programs have been updated already in the unstable branch.
	  Patch by Lo\357c Minier.

2007-05-14  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c, gui/Makefile.am: Now install GDM desktop files
	  to /usr/share/gdm/applications and append this directory to 
	  XDG_DATA_DIR before starting the user session, so that these
	  desktop files are only visible if using the GDM program as the
	  display manager.  This will ensure these menu options do not 
	  appear when using other display managers such as KDM or CDE
	  login.  Fixes bug #434813.

2007-05-14  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.19.1:
        * NEWS: Updated.
	* docs/C/gdm.xml: Updated to say release 2.19.1.
	* README.install: Minor update to Solaris recommended
	  configuration.

2007-05-11  Brian Cameron  <brian.cameron@sun.com>

	* config/Xsession.in:  Remove failsafe logic since it is 