@@ -3,7 +3,9 @@
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
     <!ENTITY legal SYSTEM "legal.xml">
     <!ENTITY version "2.19.1"> 
-    <!ENTITY date "05/14/2007"> 
+    <!ENTITY date    "05/14/2007"> 
+    <!ENTITY mdash   "&#8212;"> 
+    <!ENTITY percnt  "&#x0025;">
 ]>
 
 <article id="index" lang="en">
@@ -6560,7 +6562,7 @@ homogeneous=&quot;bool&quot;&gt;
 
 	<para>
           To use a different background for login transition than the one 
-	  used for login, insert a &quot;item&quot; node with &quot;background&quot; property set to &quot;true&quot; to draw login transition background before &quot;item&quote; node (without any &quot;background&quot; property) used for greeter background. For instance :
+	  used for login, insert a &quot;item&quot; node with &quot;background&quot; property set to &quot;true&quot; to draw login transition background before &quot;item&quot; node (without any &quot;background&quot; property) used for greeter background. For instance :
 	</para>
 <screen>
 &lt;?xml version="1.0" encoding=&quot;UTF-8&quot;?&gt;
