@@ -4,12 +4,7 @@ dist-hook: doc-dist-hook
 DOC_MODULE = gdm
 DOC_ENTITIES = gdm.xml
 DOC_INCLUDES = legal.xml
-
 DOC_LINGUAS = de en_GB es fr it ja ko sv uk zh_CN zh_HK zh_TW
 
-# Translations need migration to use gnome-doc-utils.
-# See page http://live.gnome.org/GnomeDocUtilsTranslationMigration
-
 man_MANS = gdm.1
-
 EXTRA_DIST = gdm.1
